frontend/test/should_pass/execscope_IfThenPart.grg
using exectype;

rule r
{
	modify  {
		exec(x:boolean=true ;> if{x; y:int=42; y:string="gnampf"} && y:foo=foo::Bar);
	}
}