frontend/test/should_fail/execscope_If.grg
using exectype;

rule r
{
	modify  {
		exec(x:string="Gnampf!" ;> if{x:int=42; y=x; z=x});
	}
}